<resources>
    <string name="app_name">RFTool</string>

    <string name="file_provider_authority" translatable="false">com.tools.rftool.fileprovider</string>

    <string name="error_entries_delete_failed">Some entries could not be deleted</string>
    <string name="confirm_delete_entries_message">Are you sure you want to delete the entries?</string>
    <string name="confirm_delete_entries_title">Deleting %d entries</string>
    <string name="confirm_no">No</string>
    <string name="confirm_yes">Yes</string>
    <string name="error_file_sharing">Can\'t share the file to external apps</string>
    <string name="actionmode_selected_recordings">%d selected recordings</string>
    <string name="confirm_delete_recording_title">Deleting current recording</string>
    <string name="confirm_delete_recording_message">Do you really want to delete the current recording?</string>
    <string name="chart_signal_power_title">Signal Power</string>
    <string name="toast_recording_started">Signal recording started</string>
    <string name="toast_recording_completed">Signal recording completed</string>
    <string name="toast_invalid_parameters">The parameters are invalid</string>
    <string name="toast_usb_permission_denied">USB permissions refused!</string>
    <string name="menu_share">Share</string>
    <string name="menu_delete_selection">Delete selection</string>
    <string name="menu_delete_all">Delete all</string>
    <string name="menu_delete_entry">Delete</string>
    <string name="menu_fft">FFT</string>
    <string name="menu_signal">Signal</string>
    <string name="menu_recordings">Recordings</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_start">Start</string>
    <string name="menu_stop">Stop</string>
    <string name="no_device_connected">No device connected</string>
    <string name="sample_rate">Sample Rate</string>
    <string name="tuned_frequency">Tuned Frequency</string>
    <string name="gain">Gain</string>
    <string name="frequency_offset_ppm">Frequency offset (ppm)</string>
    <string name="color_map">Color map</string>
    <string name="apply">Apply</string>
    <string name="signal_autorec">Signal AutoRec</string>
    <string name="enable_auto_recording">Enable Auto-Recording</string>
    <string name="auto_rec_threshold">Auto-Rec Threshold</string>
    <string name="auto_rec_recording_time_ms">Auto-Rec Recording Time (ms)</string>
    <string name="fft_samples">FFT Samples</string>
    <string name="menu_fm_playback_start">Start FM Playback</string>
    <string name="menu_fm_playback_stop">Stop FM Playback</string>
    <string name="enable_fm_playback">Enable FM Playback</string>
    <string name="gain_db">Gain (dB)</string>
    <string name="menu_fm_radio">FM Radio</string>

    <string-array name="color_maps">
        <item>Grayscale</item>
        <item>Heat</item>
        <item>Rainbow</item>
    </string-array>
</resources>